[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Art/Boss2/Golem_Armor_AttackC_FX.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Projectile_Movement.gd" type="Script" id=2]

[node name="Enemy2Projectile" type="KinematicBody2D"]
position = Vector2( -4, -6 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="damage_area"]
visible = false
position = Vector2( -3, 8 )
scale = Vector2( 3.32812, 3.32812 )
polygon = PoolVector2Array( -3.60563, -0.30047, 3.30516, -1.50235, 6.30986, -1.50235, 6.9108, -1.20188, 6.9108, 0.600939, 6.30986, 0.901409, 3.30516, 0.901409 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.69034, 6.77322 )
scale = Vector2( 1.77908, 1.77908 )
frames = ExtResource( 1 )
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -8.14187, 9.1785 )
scale = Vector2( 0.770908, 0.753205 )
rect = Rect2( -10, -10, 47.802, 13.746 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -3, 8 )
scale = Vector2( 3.32812, 3.32812 )
polygon = PoolVector2Array( -3.60563, -0.30047, 3.30516, -1.50235, 6.30986, -1.50235, 6.9108, -1.20188, 6.9108, 0.600939, 6.30986, 0.901409, 3.30516, 0.901409 )

[node name="projectile_despawn_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="timeout" from="projectile_despawn_timer" to="." method="_on_projectile_despawn_timer_timeout"]
